fixed simple_form checkbox alignment

--- a/app/assets/stylesheets/bootstrap-and-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-and-overrides.css.scss
@@ -334,7 +334,7 @@ div.mediaContainer.decent {
     }
 
     .title {
-      font-weight: bold;
+      font-weight: 600;
       .department { font-weight: normal; white-space: nowrap;
         &:hover { text-decoration: underline; }
       }
